Bug 489542 - Shortcut conflict dialog is confusing and not HIG-compliant
Summary: Shortcut conflict dialog is confusing and not HIG-compliant
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keys (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2024-07-01 11:15 UTC by cwo
Modified: 2024-07-07 01:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cwo 2024-07-01 11:15:13 UTC
SUMMARY

If the user attempts to set a custom shortcut that is already in use, kcm_keys shows a dialog that informs the user of this and provides options to resolve this. This dialog is confusingly worded, and has "Yes/No" button labels which the HIG state are "never acceptable button labels!". (https://develop.kde.org/hig/text_and_labels/)

The dialog currently reads:

Window title: "Found conflict – System Settings"

Text: "Shortcut Meta+E is already assigned to action 'Dolphin' of Dolphin. Do you want to reassign it?"

Buttons: "Yes" "No"

It is not quite clear what "it" refers to in the label, the shortcut Meta-E or the action Dolphin. Both would plausibly make sense:

- Yes removes Meta-E from Dolphin and reassigns it (this key combination) to the new action, leaving Dolphin/Dolphin blank. No cancels the action, leaving everything as is.
- Yes prompts the user for a new shortcut to use for Dolphin/Dolphin, reassigning it to this new shortcut. No leaves Dolphin/Dolphin blank. The new shortcut is always set.

STEPS TO REPRODUCE
1. Open System Settings > Shortcuts
2. Click Emoji Selector, "Add custom shortcut", press Meta+E

OBSERVED RESULT

See above.

EXPECTED RESULT

A dialog that is clear about what will happen on each action, and conforms to the HIG

Suggestion:

Buttons labeled "Remove existing shortcut", "Keep as is" (or just "cancel")

This is a bit longer, but with this wording the question can be removed from the dialog box, reducing the overall amount of text on screen while improving clarity.
 
Alternatively, placing the full action in the buttons would be even clearer ("Assign to Dolphin/Dolphin", "Assign to Emoji Selector/Emoji Selector"), but this would lead to problems with button labels that are too long.

A third option is changing the question to "Do you want to remove the existing shortcut?" or similar, but this would not solve the HIG issue and still be a little unclear.

SOFTWARE/OS VERSIONS
KDE Plasma Version:  6.1.80
KDE Frameworks Version: 6.4.0
Qt Version: 6.7.0
Comment 1 Nate Graham 2024-07-02 19:07:14 UTC
Definitely
Comment 2 Bug Janitor Service 2024-07-02 19:45:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2361
Comment 3 Nate Graham 2024-07-07 01:11:23 UTC
Git commit 8cea07adecd36e53c4f5b10f91bcfa4311f8d907 by Nate Graham.
Committed on 07/07/2024 at 01:02.
Pushed by ngraham into branch 'master'.

kcms/keys: make shortcut conflict dialog HIG-compliant

* Use imperative text for title
* Use KUIT formatting for text
* Use imperative and descriptive action buttons
* Make it a warning dialog, not a question dialog
FIXED-IN: 6.2.0

M  +26   -18   kcms/keys/kcm_keys.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/8cea07adecd36e53c4f5b10f91bcfa4311f8d907