kcms/keys: make shortcut conflict dialog HIG-compliant

* Use imperative text for title
* Use KUIT formatting for text
* Use imperative and descriptive action buttons
* Make it a warning dialog, not a question dialog

BUG: 489542
FIXED-IN: 6.2.0